Add background to black

--- a/css/cup-styles.css
+++ b/css/cup-styles.css
@@ -1,5 +1,6 @@
 body {
   color: turquoise;
+  background-color: black;
 }
 
 div.culture-container {
@@ -32,5 +33,5 @@ div {
     -1px -1px 0 black,
     1px -1px 0 black,
     -1px 1px 0 black,
-    1px 1px 0 black;  
+    1px 1px 0 black;
 }
